packages/svelte/tests/compiler-errors/samples/component-slot-duplicate-error-4/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'slot_default_duplicate',
		message: 'Found default slot content alongside an explicit slot="default"'
	}
});
